update to the nav

--- a/Assignment 2/simpleNav.html
+++ b/Assignment 2/simpleNav.html
@@ -6,7 +6,7 @@
         <title>Simple Webpage</title>
         <link rel="stylesheet"  href="Styles/index.css">
 
-        <section>
+        <section class="nav-bar">
             <nav>
                 <ul>
                     <li>Home</li>
