linking the pages on the nav

--- a/Assignment 2/simpleNav.html
+++ b/Assignment 2/simpleNav.html
@@ -9,9 +9,9 @@
         <section class="nav-bar">
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contact</li>
+                    <li> <a href="/simpleNav.html">Home</li>
+                    <li> <a href="/Pages/About.html">About</a></li>
+                    <li> <a href="/Pages/contact.html"></a>Contact</li>
                 </ul>
                 
             </nav>
