linking the pages on the nav

--- a/Assignment 2/Pages/About.html
+++ b/Assignment 2/Pages/About.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>THIS IS THE ABOUT US PAGE</h1>
-    <p>I am under construction</p>
+    <p class="about-paragraph">I am under construction</p>
     
 </body>
 </html>
