--- a/Assignment 2/simpleNav.html
+++ b/Assignment 2/simpleNav.html
@@ -11,7 +11,7 @@
                 <ul>
                     <li> <a href="/simpleNav.html">Home</li>
                     <li> <a href="/Pages/About.html">About</a></li>
-                    <li> <a href="/Pages/contact.html"></a>Contact</li>
+                    <li> <a href="/Pages/contact.html">Contact</li>
                 </ul>
                 
             </nav>
